# 3der

./: cube.c  donut.c  loader.c  main.c  meson.build  readme.md  renderer.c  renderer.h  vector.c  vector.h
src/: canvas.c  canvas.h  donut.c  loader.c  loader.h  main.c  msc.c  msc.h  renderer.c  renderer.h  vector.c  vector.h
tests/: main.c
